# AI-Governance-Auditor-

./: .dockerignore  .gitignore  BOOTSTRAP.md  Dockerfile  README.md  RUNBOOK.md  ai_governance_auditor_bom_prompt.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
aigov/: __init__.py  api.py  assess.py  auth.py  classify.py  cli.py  ingest.py  record.py  report.py  ui.py
aigov/bom/: __init__.py  cdx_gen.py  gaps.py  spdx_gen.py  validate.py
aigov/knowledge/: __init__.py
aigov/knowledge/data/: classification.yaml  meta.yaml  timeline.yaml
aigov/knowledge/data/crosswalk/: article_09.yaml  article_10.yaml  article_11.yaml  article_13.yaml  article_14.yaml  article_15.yaml
aigov/templates/: report.md.j2
docs/: mapping_rationale.md
examples/: model_card_mistral.md  resume_screener.yaml
tests/: test_api.py  test_assess.py  test_auth.py  test_bom.py  test_classify.py  test_ingest.py  test_ui.py
tools/: package-lock.json  package.json  validate_cdx_independent.mjs  validate_spdx_shacl.py
