[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aigov"
version = "0.1.0"
description = "AI Governance Auditor & AI-BOM Generator - EU AI Act / ISO 42001 / NIST AI RMF / OWASP LLM crosswalk auditing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "markdown>=3.5",
    "spdx-python-model>=0.0.6",
    "cyclonedx-python-lib>=11.4",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
aigov = "aigov.cli:app"

[tool.setuptools.packages.find]
include = ["aigov*"]

[tool.setuptools.package-data]
aigov = ["knowledge/data/**/*.yaml", "templates/*.j2", "bom/schemas/*.json"]
